Fixed css when names are too long in sidebar. Fixed model save/load order. Fixed js error when the graph is loading.

--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -180,11 +180,11 @@
             },
 
             hasSelectedEntities: function () {
-                return this._renderer.hasSelectedEntities();
+                return this._isReady && this._renderer.hasSelectedEntities();
             },
 
             hasSelection: function () {
-                return this._renderer.hasSelection();
+                return this._isReady && this._renderer.hasSelection();
             },
 
             zoomToFit: function () {
