--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -87,16 +87,25 @@
                     this.fire("error", {error: new pandora.Exception("A name should provided to create a variable")});
                     return false;
                 }
-                if (name !== previous && this._graph.getModel(name) !== undefined) {
+                if (name !== previous && this._graph.getModel(name) !== null) {
                     this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
                     return false;
                 }
-                this._graph.deleteModel(name);
-                this._graph.addModel(new cg.Variable({
+                var previousModel = this._graph.removeModel(previous);
+                var newModel = this._graph.addModel(new cg.Variable({
                     "name": name,
                     "value-type": type,
                     "value": value
                 }));
+                var blocks = this._graph.findBlocks(function (block) {
+                    return block._model === previousModel;
+                });
+                pandora.forEach(blocks, function (block) {
+                    var newBlock = new cg.Block(block._id, newModel, block.position, block.value);
+                    // TODO: This is broken, no add
+                    this._graph.addEntity(newBlock, this._graph);
+                    this._graph.removeEntity(block);
+                }.bind(this));
                 return true;
             },
 
@@ -107,7 +116,7 @@
                 pandora.forEach(blocks, function (block) {
                     this._graph.removeEntity(block);
                 }.bind(this));
-                this._graph.deleteModel(name);
+                this._graph.removeModel(name);
             },
 
             createGroup: function (name) {
