Fixed edit variable, there is still a problem with previous set when an error is triggered

--- a/cg-app.html
+++ b/cg-app.html
@@ -287,8 +287,8 @@
                     this.$.toolbar.state = "editGroup";
                 } else if (entity instanceof cg.Block) {
                     if (entity.model.type === "action") {
-                        this.$.success.text = "Actions are read only.";
-                        this.$.success.show();
+                        this.$.error.text = "Actions are read only.";
+                        this.$.error.show();
                     } else if (entity.model.type === "value" || entity.model.type === "variable") {
                         this.$.toolbar.state = "editPicker";
                         this.$.sidebar.state = "picker";
