--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -100,6 +100,7 @@
                     return block._name === previous;
                 });
                 model._name = name;
+                model.value = value;
                 pandora.forEach(blocks, function (block) {
                     block.__name = name;
                     block.emit("update");
