Add preview example and edit shortcut.

--- a/cg-app.html
+++ b/cg-app.html
@@ -180,7 +180,8 @@
                         "G": "openGroup",
                         "A": "openAction",
                         "P": "openPicker",
-                        "X": "removeSelection"
+                        "X": "removeSelection",
+                        "E": "editEntity"
                     }
                 },
                 graph: null
