Added reset picker

--- a/cg-app.html
+++ b/cg-app.html
@@ -31,6 +31,7 @@
         <dude-panel id="panel"
                     name="story-editor"
                     config="{{config.panel}}"
+                    on-dude-reset="{{_resetPicker}}"
                     flex>
             <dude-toolbar id="toolbar">
                 <div data-state="root" layout horizontal justified>
@@ -401,6 +402,10 @@
                     }
                 }.bind(this));
                 return model;
+            },
+            _resetPicker: function() {
+                this._pickerPattern = "";
+                this.$.pickerElement.reset();
             },
             resetPicker: function () {
                 this.$.sidebar.state = "picker";
