--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -87,7 +87,7 @@
                     this.fire("error", {error: new pandora.Exception("A name should be provided to create a variable")});
                     return false;
                 }
-                if (this._graph.getModel(name)) {
+                if (previous !== name && this._graph.getModel(name)) {
                     this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
                     return false;
                 }
