--- a/cg-variable-inspector.html
+++ b/cg-variable-inspector.html
@@ -14,7 +14,7 @@
             <paper-input-decorator label="name">
                 <input is="core-input" type="text" value="{{_name}}">
             </paper-input-decorator>
-            <dude-picker type="{{_type}}" value="{{_value}}"></dude-picker>
+            <dude-picker id="picker" type="{{_type}}" value="{{_value}}"></dude-picker>
             <div layout horizontal class="row" style="margin-bottom: 10px">
                 <paper-button on-click="{{_submit}}" flex class="primary">
                     <core-icon icon="check"></core-icon>
@@ -65,6 +65,7 @@
                     this._type = this.types[0].name;
                     this._name = "";
                     this._value = null;
+                    this.$.picker.valueChanged();
                 }
             },
             _valueChanged: function () {
