--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -70,6 +70,10 @@
                     this.fire("error", {error: new pandora.Exception("A name should be provided to create a variable")});
                     return false;
                 }
+                if (/^[a-zA-Z][a-zA-Z0-9-_ ]*$/.test(name) === false) {
+                    this.fire("error", {error: new pandora.Exception("A variable name should be a valid identifier")});
+                    return false;
+                }
                 if (this._graph.getModel(name)) {
                     this.fire("error", {error: new pandora.Exception("Variable {0} already exists", name)});
                     return false;
