Hide best fit button.

--- a/cg-app.html
+++ b/cg-app.html
@@ -197,8 +197,8 @@
                 "openAction": {label: "add an action", icon: "add-box"},
                 "openPicker": {label: "add a picker", icon: "add-circle"},
                 "editEntity": {label: "edit the selected object", icon: "create", disabled: true},
-                "removeSelection": {label: "remove all the selected objects", icon: "delete", disabled: true},
-                "zoomToFit": {label: "zoom to best fit all objects", icon: "image:crop-free"}//,
+                "removeSelection": {label: "remove all the selected objects", icon: "delete", disabled: true}//,
+//                "zoomToFit": {label: "zoom to best fit all objects", icon: "image:crop-free"}//,
                 //"undo": {label: "undo last action", icon: "undo", disabled: true},
                 //"redo": {label: "redo last action", icon: "redo", disabled: true}
             },
