--- a/cg-renderer.html
+++ b/cg-renderer.html
@@ -134,8 +134,8 @@
 
             createAction: function (model, position) {
                 position.assign([
-                    position.x - this._graph.zoom.translate[0],
-                    position.y - this._graph.zoom.translate[1]
+                    (position.x - this._graph.zoom.translate[0]) / this._graph.zoom.scale,
+                    (position.y - this._graph.zoom.translate[1]) / this._graph.zoom.scale
                 ]);
                 var block = new cg.Block(this._graph.getNextBlockId(), model, position);
                 this._graph.addEntity(block, this._graph);
